package cl.duoc.speedfast.interfaces;

public interface Despachable {
    void despachar();
}